--- a/styles/scss/blocks/_tasks.scss
+++ b/styles/scss/blocks/_tasks.scss
@@ -15,6 +15,7 @@
 	}
 
 	.task {
+		cursor: pointer;
 
 		p, task-priority {
 
